--- a/chart1.html
+++ b/chart1.html
@@ -2,14 +2,16 @@
 <head>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
-google.load("visualization", '1', {packages:['motionchart']});
+ // Load the Visualization API and the corechart package.
+google.charts.load('current', {'packages':['corechart']});
+
 google.setOnLoadCallback(drawChart);
  
 
 function drawChart() 
 {
     var queryString = encodeURIComponent('SELECT *');
-    var query = new google.visualization.Query('https://docs.google.com/a/upei.ca/spreadsheets/d/1qLbm_CjENW1QQlgfYPugwQX-iT5S-CvCpDwy7-Jv0xc/gviz/tq?gid=0&headers=1&tq='+queryString);
+    var query = new google.visualization.Query('https://docs.google.com/a/upei.ca/spreadsheets/d/1qLbm_CjENW1QQlgfYPugwQX-iT5S-CvCpDwy7-Jv0xc/gviz/tq?gid=0&headers=1&sheet=Ebooks&tq='+queryString);
     
     query.send(handleQueryResponse);
 }
@@ -21,7 +23,7 @@ function handleQueryResponse(response) {
   }
 
   var data = response.getDataTable();
-  var mychart = new google.visualization.MotionChart(document.getElementById('chart_div'));
+  var mychart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
   mychart.draw(data, {width: 600, height:300});
 }
 </script>
