--- a/chart1.html
+++ b/chart1.html
@@ -32,7 +32,7 @@ google.setOnLoadCallback(drawChart);
 <title>My Data from a Spreadsheet</title>
 </head>
 <body>
- <div>The intro to my page  goes here</div>
+ <div>The intro to my page 2 goes here</div>
 <div id='chart_div'></div>
 </body>
 </html>
