--- a/sample1.html
+++ b/sample1.html
@@ -1,9 +1,43 @@
 <html>
 	<head>
-<script>
-    alert("Hello World!");
-<script>
-	</head
-	<body>
-	</body>
+<script type="text/javascript">
+var visualization;
+
+function drawVisualization() {
+  // To see the data that this visualization uses, browse to
+  // http://spreadsheets.google.com/ccc?key=pCQbetd-CptGXxxQIG7VFIQ
+  var query = new google.visualization.Query(
+      'https://docs.google.com/spreadsheet/ccc?key=0AiA3av6cH1otdHlUMGQxcDhHOU0xX004QV9DWmlESGc&amp;usp=sharing');
+  query.setQuery('select A, B');
+
+  // Send the query with a callback function.
+  query.send(handleQueryResponse);
+}
+
+function handleQueryResponse(response) {
+  if (response.isError()) {
+    alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
+    return;
+  }
+
+  var data = response.getDataTable();
+  var options = {
+    title: "Weight History",
+    width: 700,
+    height: 500,
+    bar: {groupWidth: "95%"},
+    legend: { position: "none" },
+  };
+  visualization = new google.visualization.ColumnChart(document.getElementById('visualization'));
+  visualization.draw(data, options);
+}
+
+google.setOnLoadCallback(drawVisualization);
+</script>
+
+</head>
+<body>
+		<div>Testing 2</div>
+		<div id="visualization">Chart goes here</div>
+</body>
 </html>
