--- a/sample1.html
+++ b/sample1.html
@@ -33,6 +33,7 @@ function handleQueryResponse(response) {
 }
 
 google.setOnLoadCallback(drawVisualization);
+document.getElementById('visualization').innerHTML += '<br>Some new content!';
 </script>
 
 </head>
