--- a/sample1.html
+++ b/sample1.html
@@ -33,12 +33,14 @@ function handleQueryResponse(response) {
 }
 
 google.setOnLoadCallback(drawVisualization);
+
+</script>
+<script type="text/javascript">
 document.getElementById('visualization').innerHTML += '<br>Some new content!';
 </script>
-
 </head>
 <body>
-		<div>Testing 2</div>
+		<div>Testing 3</div>
 		<div id="visualization">Chart goes here</div>
 </body>
 </html>
