--- a/sample1.html
+++ b/sample1.html
@@ -1,46 +1,50 @@
 <html>
-	<head>
-<script type="text/javascript">
-var visualization;
+  <head>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load('visualization', '1', {'packages':['motionchart']});
+      google.setOnLoadCallback(drawChart);
 
-function drawVisualization() {
-  // To see the data that this visualization uses, browse to
-  // http://spreadsheets.google.com/ccc?key=pCQbetd-CptGXxxQIG7VFIQ
-  var query = new google.visualization.Query(
-      'https://docs.google.com/spreadsheet/ccc?key=0AiA3av6cH1otdHlUMGQxcDhHOU0xX004QV9DWmlESGc&amp;usp=sharing');
-  query.setQuery('select A, B');
-
-  // Send the query with a callback function.
-  query.send(handleQueryResponse);
-}
-
-function handleQueryResponse(response) {
-  if (response.isError()) {
-    alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
-    return;
-  }
-
-  var data = response.getDataTable();
-  var options = {
-    title: "Weight History",
-    width: 700,
-    height: 500,
-    bar: {groupWidth: "95%"},
-    legend: { position: "none" },
-  };
-  visualization = new google.visualization.ColumnChart(document.getElementById('visualization'));
-  visualization.draw(data, options);
-}
-
-google.setOnLoadCallback(drawVisualization);
-
-</script>
-<script type="text/javascript">
-document.getElementById('visualization').innerHTML += '<br>Some new content!';
-</script>
-</head>
-<body>
-		<div>Testing 3</div>
-		<div id="visualization">Chart goes here</div>
-</body>
+      function drawChart() {
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Country');
+        data.addColumn('date', 'Date');
+        data.addColumn('number', 'MotorVehicles');
+        data.addColumn('number', 'Population');
+        data.addRows([
+        ['Africa', new Date(2011,1,1),  31193692, 962141891],
+        ['Asia, Far East', new Date(2011,1,1),  265431331, 3722912359],
+        ['Asia, Middle East', new Date(2011,1,1),  36077342, 302337690],
+        ['Brazil', new Date(2011,1,1),  34654969, 197595498],
+        ['Canada', new Date(2011,1,1),  21311000, 34030589],
+        ['Central & South America', new Date(2011,1,1),  100492455, 589210431],
+        ['China', new Date(2011,1,1),  93500000, 1336718015],
+        ['Europe, East', new Date(2011,1,1),  102093375, 305286548],
+        ['Europe, West', new Date(2011,1,1),  244572580, 414579002],
+        ['India', new Date(2011,1,1),  24114000, 1189172906],
+        ['Indonesia', new Date(2011,1,1),  16856000, 246065161],
+        ['Pacific', new Date(2011,1,1),  19335216, 34121250],
+        ['United States', new Date(2011,1,1),  248931633, 311588000],
+        ['Africa', new Date(2001,1,1),  18148190, 757466312],
+        ['Asia, Far East', new Date(2001,1,1),  138569841, 3349626391],
+        ['Asia, Middle East', new Date(2001,1,1),  21142467, 251492491],
+        ['Brazil', new Date(2001,1,1),  19845000, 176789957],
+        ['Canada', new Date(2001,1,1),  17783343, 31376736],
+        ['Central & South America', new Date(2001,1,1),  57684841, 523923953],
+        ['China', new Date(2001,1,1),  14537000, 1270744232],
+        ['Europe, East', new Date(2001,1,1),  64486961, 314161172],
+        ['Europe, West', new Date(2001,1,1),  218908120, 396373562],
+        ['India', new Date(2001,1,1),  8413000, 1023295084],
+        ['Indonesia', new Date(2001,1,1),  5585000, 217197016],
+        ['Pacific', new Date(2001,1,1),  15278446, 29746148],
+        ['United States', new Date(2001,1,1),  216682937, 284968955]
+        ]);
+        var chart = new google.visualization.MotionChart(document.getElementById('chart_div'));
+        chart.draw(data, {width: 600, height:300});
+      }
+    </script>
+  </head>
+  <body>
+    <div id="chart_div" style="width: 600px; height: 300px;"></div>
+  </body>
 </html>
