--- a/chart1.html
+++ b/chart1.html
@@ -1,35 +1,49 @@
 <html>
   <head>
-    <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
-
-      // Load the Visualization API and the corechart package.
-      google.charts.load('current', {'packages':['corechart']});
-
-      // Set a callback to run when the Google Visualization API is loaded.
-      google.charts.setOnLoadCallback(drawChart);
-
-function drawChart() {
-  var query = new google.visualization.Query('https://spreadsheets.google.com/pub?key=pefjvshKHZ12bWp_VWpJjdQ/gviz/tq?gid=0&headers=1&tq=select%20A%2C%20B');
-  query.send(handleQueryResponse);
-
-    function handleQueryResponse(response) {
-      if (response.isError()) {
-        alert('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
-        return;
+      google.charts.load('current', {'packages': ['table', 'map', 'corechart']});
+      google.charts.setOnLoadCallback(initialize);
+      function initialize() {
+        // The URL of the spreadsheet to source data from.
+        var query = new google.visualization.Query(
+            'https://spreadsheets.google.com/pub?key=pCQbetd-CptF0r8qmCOlZGg');
+        query.send(draw);
       }
-
-      var data = response.getDataTable();
-      var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
-      chart.draw(data);
-}
-</script>
- </head>
-
-  <body>
-   <div id="mainbody">Testing 4</div>
-    <!--Div that will hold the chart-->
-    <div id="chart_div"></div>
-  </body>
-</html>
+      function draw(response) {
+        if (response.isError()) {
+          alert('Error in query');
+        }
+        var ticketsData = response.getDataTable();
+        var chart = new google.visualization.ColumnChart(
+            document.getElementById('chart_div'));
+        chart.draw(ticketsData, {'isStacked': true, 'legend': 'bottom',
+            'vAxis': {'title': 'Number of tickets'}});
+        var geoData = google.visualization.arrayToDataTable([
+          ['Lat', 'Lon', 'Name', 'Food?'],
+          [51.5072, -0.1275, 'Cinematics London', true],
+          [48.8567, 2.3508, 'Cinematics Paris', true],
+          [55.7500, 37.6167, 'Cinematics Moscow', false]]);
+        var geoView = new google.visualization.DataView(geoData);
+        geoView.setColumns([0, 1]);
+        var table =
+            new google.visualization.Table(document.getElementById('table_div'));
+        table.draw(geoData, {showRowNumber: false, width: '100%', height: '100%'});
+        var map =
+            new google.visualization.Map(document.getElementById('map_div'));
+        map.draw(geoView, {showTip: true});
+        // Set a 'select' event listener for the table.
+        // When the table is selected, we set the selection on the map.
+        google.visualization.events.addListener(table, 'select',
+            function() {
+              map.setSelection(table.getSelection());
+            });
+        // Set a 'select' event listener for the map.
+        // When the map is selected, we set the selection on the table.
+        google.visualization.events.addListener(map, 'select',
+            function() {
+              table.setSelection(map.getSelection());
+            });
+      }
+    </script>
+  </head>
