--- a/pa.html
+++ b/pa.html
@@ -11,8 +11,7 @@
 &key=0AqAPbBT_k2VUdDc3aC1xS2o0c2ZmaVpOQWkyY0l1eVE
 &gid=2
 -->
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTlLs0zHvi5EFmBiDXF9NjV_q9LnDz_xMuNx2k4tDlfPWf6sICFx3to3ujoen69btMj8UBrZ2afSp2r/pubhtml?gid=0&single=true
-                 ?headers=true&amp;gid=0&amp;range=A1:E2000" width="900"></iframe>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTlLs0zHvi5EFmBiDXF9NjV_q9LnDz_xMuNx2k4tDlfPWf6sICFx3to3ujoen69btMj8UBrZ2afSp2r/pubhtml?gid=0&single=true&range=A1:E2000" width="900"></iframe>
   </body>
 </html
   
